- dev4:  speed improvements in areas that will help speed of auto-loading new images; primarily reducing number of times that redraw_*_image routines are called, though the fixes may still be fragile and result in >1 or 0 calls when 1 call needed & more testing needed.

--------------------
0.2.1-5   2015-09-22
--------------------

- added a delay to WatchMasterPIDThread before beginning watch loop

--------------------
0.2.1-3   2015-09-08
--------------------

- updated README.md for anaconda install example

--------------------
0.2.1-2   2015-09-08
--------------------

- added instructions for install on a fresh OS X Yosemite 10.10 system using Homebrew Python distribution to README.md
- added instructions for install on a fresh OS X Yosemite 10.10 system using Anaconda Python distribution to README.md
- in ztv_api.py: for launching ztv in a separate python process, made `pythonw` the default python executable, reverting to `python` only if `pythonw` is not available.  This gets around some of the Frameworks/wxPython issues that crop up when running in a virtual environment, particularly, e.g., anaconda python distro.

------------------
0.2.1-1
------------------

- fixed __init__.py so that "import ztv ; print ztv.__version__" works

------------------
v0.2.1, 0.2.0
------------------

- now requiring wxPython version >= 3.0.0  (This is the reason for the larger bump in version number)
- fixed a number of GUI bugs that wxPython upgrade introduced. (More likely than bugs with wxPython 3 is that the wxPython 2 had bugs that had been worked-around and/or other issues.)
- added instructions for install on a fresh OS X Yosemite 10.10 system using system's Python distribution to README.md